manifests/ghost/ghost_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5.130.3
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: ghost-data
              mountPath: /var/lib/ghost/content
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 512Mi
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-data

---
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
  namespace: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
