manifests/ghost/ghost_deployment_tor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: ghost-tor
  template:
    metadata:
      labels:
        app: ghost-tor
    spec:
      containers:
        - name: ghost
          image: ghost:5.71.0
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: ghost-data
              mountPath: /var/lib/ghost/content
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 512Mi
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-data

---
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
  namespace: ghost
spec:
  loadBalancerIP: 192.168.0.56
  type: LoadBalancer
  selector:
    app: ghost-tor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
