manifests/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: issuer
    kubernetes.io/ingress.class: traefik
  labels:
    app.kubernetes.io/instance: tls-ghost-ingress
  name: tls-ghost-ingress
spec:
  rules:
    - host: alexbissessur.dev
      http:
        paths:
          - backend:
              service:
                name: ghost-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - alexbissessur.dev
      secretName: tls-ghost-ingress
