manifests/ghost/ingressclass.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghostroute
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`alexbissessur.dev`)
    services:
    - name: ghost-svc
      port: 80
  tls:
    certResolver: le
